# flash-prompter

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: release.yml
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
