[package]
name = "flash-prompter"
version = "0.1.0"
description = "A Flash Prompter application"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.2.4", features = [] }

[dependencies]
tauri = { version = "2.2.4", features = [] }
tauri-plugin-opener = "2.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2.2.0"
tauri-plugin-updater = "2.2.1"

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "0.6"
windows = { version = "0.54", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
